fixed broken styling in the Styles panel due to missing margins

--- a/client/src/style/sass/common/_right-panel.scss
+++ b/client/src/style/sass/common/_right-panel.scss
@@ -159,6 +159,10 @@
         }
     }
 
+    .style-panel-item {
+        margin: 10px;
+    }
+
     .link-circle {
         border: 2px solid $panel-border-dark;
         border-radius: 100%;
